--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react-dom": "^18.2.25",
     "mongoose": "^8.3.2",
     "next": "latest",
+    "next-auth": "5.0.0-beta.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^2.2.5",
